--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "//1": "describes your app and its dependencies",
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
-  "version": "0.0.1",
+  "name": "recaptime-tgbot",
+  "version": "0.5.0-canary",
   "description": "A simple Node app built on Express, instantly up and running.",
   "main": "server.js",
   "scripts": {
@@ -14,7 +14,7 @@
     "node-telegram-bot-api": "^0.30.0"
   },
   "engines": {
-    "node": "8.x"
+    "node": "12.x"
   },
   "repository": {
     "url": "https://glitch.com/edit/#!/hello-express"
