--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.4",
-    "node-telegram-bot-api": "^0.30.0"
+    "express": "^4.17.1",
+    "node-telegram-bot-api": "^0.30.0",
+    "body-parser": "^1.19.0"
   },
   "engines": {
     "node": "12.x"
@@ -23,6 +24,7 @@
   "keywords": [
     "node",
     "glitch",
-    "express"
+    "express",
+    "node-telegram-bot-api"
   ]
 }
