--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "node-telegram-bot-api": "^0.30.0",
-    "body-parser": "^1.19.0"
+    "node-telegram-keyboard-wrapper": "^2.0.1",
+    "node-telegram-operation-manager": "^1.2.0"
   },
   "engines": {
     "node": "12.x"
