--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "description": "A simple Node app built on Express, instantly up and running.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "npm install && node server.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
