--- a/now.json
+++ b/now.json
@@ -5,8 +5,6 @@
     "PORT": "443",
     "NODE_ENV": "production"
   },
-  "builds": {
-    "scr": ".js",
-    "use": "@now/nodejs"
-  }
+  "builds":
+    {"scr": "*.js", "use": "@now/nodejs"}
 }
