--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "npm install && node server.js"
+    "build": "node server.js",
+    "now": "npm install @now"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
