--- a/now.json
+++ b/now.json
@@ -1,10 +1,11 @@
 {
   "version": "2",
   "name": "recaptime-tgbot-nodejs",
+  "alias": ["telegram-bot.recaptime.tk", "recaptime-tgbot"],
   "env": {
     "PORT": "443",
     "NODE_ENV": "production"
   },
-  "builds":
+  "build":
     {"scr": "*.js", "use": "@now/nodejs"}
 }
