🚡🌄 Checkpoint ./views/index.html:4790460/2 ./now.json:4790460/568 ./server.js:4790460/447 ./README.md:4790460/79

--- a/now.json
+++ b/now.json
@@ -6,6 +6,5 @@
     "PORT": "443",
     "NODE_ENV": "production"
   },
-  "build":
-    {"scr": "*.js", "use": "@now/nodejs"}
+  "build": [{ "scr": "*.js", "use": "@now/nodejs" }]
 }
