--- a/now.json
+++ b/now.json
@@ -6,5 +6,5 @@
     "PORT": "443",
     "NODE_ENV": "production"
   },
-  "build": [{ "scr": "*.js", "use": "@now/nodejs" }]
+  "builds": [{ "scr": "*.js", "use": "@now/nodejs" }]
 }
