🏚💿 Checkpoint ./link-to-pm2.io.sh:4790460/169 ./docs/montioring-with-pm2.md:4790460/32 ./ecosystem.config.js:4790460/16 ./.env.test:4790460/127

--- a/.env.test
+++ b/.env.test
@@ -8,5 +8,11 @@
 TGBOT_TOKEN=
 APP_URL=https://your-project-slug.glitch.me
 PORT=
+NODE_ENV=
+TERRORISER_TOKEN1=
+TERRORISER_TOKEN2=
+PM2_PUBLIC_KEY=$TERRORISER_TOKEN2
+PM2
+PM2_MACHINE_NAME=$PROJECT_DOMAIN
 
 # note: .env is a shell file so there can't be spaces around =
