💶🍔 Checkpoint ./.env.test:4790460/37 ./scripts/link-to-pm2.io.sh:4790460/109 ./ecosystem.config.js:4790460/344 ./docs/montioring-with-pm2.md:4790460/14

--- a/.env.test
+++ b/.env.test
@@ -12,7 +12,7 @@ NODE_ENV=
 TERRORISER_TOKEN1=
 TERRORISER_TOKEN2=
 PM2_PUBLIC_KEY=$TERRORISER_TOKEN2
-PM2
+PM2_PRIVATE_KEY=$TERRORISER_TOKEN1
 PM2_MACHINE_NAME=$PROJECT_DOMAIN
 
 # note: .env is a shell file so there can't be spaces around =
