--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node-telegram-bot-api": "^0.30.0",
     "node-telegram-keyboard-wrapper": "^2.0.1",
     "node-telegram-operation-manager": "^1.2.0",
-    "pm2": "^4.2.1"
+    "pm2": "^4.2.1",
+    "markdown-it": "^10.0.0"
   },
   "engines": {
     "node": "12.x"
