--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "docsify-cli": "^4.4.0",
     "express": "^4.17.1",
     "pm2": "^4.2.1"
   },
