--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "//1": "describes your app and its dependencies",
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
-  "name": "recaptime-tgbot",
+  "name": "recaptime-tgbot-nodejs",
   "version": "0.5.0-canary",
   "description": "A simple Node app built on Express, instantly up and running.",
   "main": "server.js",
