Denoting users in README that docs got moved somewhere

--- a/.env.test
+++ b/.env.test
@@ -6,13 +6,11 @@
 # reference these in your code with process.env.SECRET
 
 TGBOT_TOKEN=
-APP_URL=https://your-project-slug.glitch.me
+APP_URL=
 PORT=
 NODE_ENV=
-TERRORISER_TOKEN1=
-TERRORISER_TOKEN2=
-PM2_PUBLIC_KEY=$TERRORISER_TOKEN2
-PM2_PRIVATE_KEY=$TERRORISER_TOKEN1
-PM2_MACHINE_NAME=$PROJECT_DOMAIN
+PM2_PUBLIC_KEY=
+PM2_PRIVATE_KEY=
+PM2_MACHINE_NAME=
 
 # note: .env is a shell file so there can't be spaces around =
