--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "docsify-cli": "^4.4.0",
     "express": "^4.17.1",
-    "pm2": "^4.2.1"
+    "pm2": "^4.2.1",
+    "telegraf": "^3.35.0"
   },
   "engines": {
     "node": "12.x"
