--- a/.env.test
+++ b/.env.test
@@ -1,11 +1,14 @@
 # Environment Config
 
 # store your secrets and config variables in here
-# only invited collaborators will be able to see your .env values
+# only invited Glitch.com collaborators will be able to see your .env values
 
 # reference these in your code with process.env.SECRET
 
+# Get your bot token from BotFather
 TGBOT_TOKEN=
+
+# To make your app available online, check
 APP_URL=
 PORT=
 NODE_ENV=
