🚘🌜 Checkpoint ./.env.test:4790460/220

--- a/.env.test
+++ b/.env.test
@@ -8,12 +8,18 @@
 # Get your bot token from BotFather
 TGBOT_TOKEN=
 
-# To make your app available online, check
+# To make your app available online, check the docs for deployment options
 APP_URL=
+
+# Set the port to either 3000 or 449
 PORT=
+
+# Set the Node environment status to test or staging. For prod deployments, use production
 NODE_ENV=
+
+# See PM2 Plus documentation for these
 PM2_PUBLIC_KEY=
 PM2_PRIVATE_KEY=
-PM2_MACHINE_NAME=
+PM2_MACHINE_NAME=handsome-sheet
 
 # note: .env is a shell file so there can't be spaces around =
