🐚🎹 Checkpoint ./.env.test:4790460/13

--- a/.env.test
+++ b/.env.test
@@ -11,6 +11,9 @@ TGBOT_TOKEN=
 # To make your app available online, check the docs for deployment options
 APP_URL=
 
+#
+NOW_TOKEN
+
 # Set the port to either 3000 or 449
 PORT=
 
