--- a/app.json
+++ b/app.json
@@ -19,6 +19,10 @@
       "description": "Setting this to ANYTHING will enable environment variables.",
       "value": "ANYTHING"
     },
+    "APP_URL": {
+      "description": "This env variable should be same as your Heroku app slug. Required for webhooks to work.",
+      "value": "https://your-new-app-slug.herokuapp.com"
+    },
     "TGBOT_TOKEN": {
       "description": "Get your Telegram bot token from BotFater. Please avoid using this dev token!",
       "value": "",
