--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pm2": "^4.2.1",
-    "telegraf": "^3.35.0"
+    "telegraf": "^3.35.0",
+    "axios": "^0.19.0",
+    "mongodb": "^3.4.1",
+    "nodemon": "^2.0.2"
   },
   "engines": {
     "node": "12.x"
