--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nodemon": "^2.0.2"
   },
   "engines": {
-    "node": "12.x"
+    "node": "12.x",
+    "npm": "6.13.4"
   },
   "repository": {
     "url": "https://glitch.com/edit/#!/hello-express"
