🌹🎠 Checkpoint ./package.json:4790460/22 ./scipts/deploy-to-now:4790460/23 ./scipts/deploy-to-now.sh:4790460/162 ./server.js:4790460/1734

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "node server.js",
-    "now": "npm install now && now --token $NOW_TOKEN"
+    "deploy-to-now": "npm install now && now --token $NOW_TOKEN"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -34,6 +34,6 @@
     "node-telegram-bot-api"
   ],
   "bugs": {
-    "url": "https://handsome-sheet.glitch.me/"
+    "url": "https://handsome-sheet.glitch.me/report-a-bug"
   }
 }
